fix: Fixed typos.

--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -1538,7 +1538,7 @@
 </thead>
 <tbody>
 <tr>
-<td>username_list</td>
+<td>usernameList</td>
 <td>string[]</td>
 <td>好友用户名称列表</td>
 <td>["Jimmy", "LittleSeven", "Ubec"]</td>
