--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -1885,14 +1885,20 @@
 <tr>
 <td>username</td>
 <td>string</td>
-<td>用户名称</td>
+<td>被申请用户名称</td>
 <td>"Jimmy"</td>
 </tr>
 <tr>
 <td>groupID</td>
 <td>string</td>
-<td>群聊 ID</td>
+<td>被申请群聊 ID</td>
 <td>"111"</td>
+</tr>
+<tr>
+<td>sender</td>
+<td>string</td>
+<td>申请人用户名称</td>
+<td>"Ubec"</td>
 </tr>
 <tr>
 <td>type</td>
@@ -1901,7 +1907,7 @@
 <td>"group"</td>
 </tr>
 <tr>
-<td>msg</td>
+<td>reason</td>
 <td>string</td>
 <td>申请语</td>
 <td>"Please let me join in!"</td>
