--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -1498,10 +1498,6 @@
 </div>
 </div>
 <h2 id="listgroup">/list/group</h2>
-<details class="danger" open="open">
-<summary>Danger</summary>
-<p>该接口仍未完工。</p>
-</details>
 <p>场景：用于获取群聊列表</p>
 <p>类型：GET</p>
 <div class="tabbed-set tabbed-alternate" data-tabs="11:1"><input checked="checked" id="__tabbed_11_1" name="__tabbed_11" type="radio" /><div class="tabbed-labels"><label for="__tabbed_11_1">响应参数</label></div>
@@ -1520,10 +1516,10 @@
 </thead>
 <tbody>
 <tr>
-<td>group_id_list</td>
-<td>string[]</td>
-<td>群聊 id 列表</td>
-<td>["1111", "2222"]</td>
+<td>groupList</td>
+<td>Group[]</td>
+<td>群聊列表（每一项需要包括 groupname, groupID, 用户列表 users[]，用户每一项需要包括 username 和 avatar）</td>
+<td></td>
 </tr>
 <tr>
 <td>errmsg</td>
@@ -1556,10 +1552,10 @@
 </thead>
 <tbody>
 <tr>
-<td>usernameList</td>
-<td>string[]</td>
-<td>好友用户名称列表</td>
-<td>["Jimmy", "LittleSeven", "Ubec"]</td>
+<td>userList</td>
+<td>User[]</td>
+<td>好友用户列表，每一项需要包括 username, nickname, avatar</td>
+<td></td>
 </tr>
 <tr>
 <td>code</td>
@@ -1750,11 +1746,11 @@
 </table>
 <h2 id="searchuser">/search/user</h2>
 <p>场景：查询特定用户信息</p>
-<p>类型：POST</p>
+<p>类型：GET</p>
 <div class="tabbed-set tabbed-alternate" data-tabs="17:3"><input checked="checked" id="__tabbed_17_1" name="__tabbed_17" type="radio" /><input id="__tabbed_17_2" name="__tabbed_17" type="radio" /><input id="__tabbed_17_3" name="__tabbed_17" type="radio" /><div class="tabbed-labels"><label for="__tabbed_17_1">请求头</label><label for="__tabbed_17_2">请求体</label><label for="__tabbed_17_3">响应参数</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
-<p>使用 POST 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
+<p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
 </div>
 <div class="tabbed-block">
 <details class="danger" open="open">
@@ -1794,7 +1790,7 @@
 <tr>
 <td>userList</td>
 <td>User[]</td>
-<td>满足要求的用户列表，每一项需要包括 username, email, avatar 三项</td>
+<td>满足要求的用户列表，每一项需要包括 username, avatar</td>
 <td></td>
 </tr>
 <tr>
@@ -1816,11 +1812,11 @@
 </div>
 <h2 id="searchgroup">/search/group</h2>
 <p>场景：查询特定群聊信息</p>
-<p>类型：POST</p>
+<p>类型：GET</p>
 <div class="tabbed-set tabbed-alternate" data-tabs="18:3"><input checked="checked" id="__tabbed_18_1" name="__tabbed_18" type="radio" /><input id="__tabbed_18_2" name="__tabbed_18" type="radio" /><input id="__tabbed_18_3" name="__tabbed_18" type="radio" /><div class="tabbed-labels"><label for="__tabbed_18_1">请求头</label><label for="__tabbed_18_2">请求体</label><label for="__tabbed_18_3">响应参数</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
-<p>使用 POST 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
+<p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
 </div>
 <div class="tabbed-block">
 <table>
@@ -1882,12 +1878,10 @@
 <p>该接口仍未完工。</p>
 </details>
 <p>场景：用于获取聊天记录</p>
-<p>类型：POST</p>
-<div class="tabbed-set tabbed-alternate" data-tabs="19:1"><input checked="checked" id="__tabbed_19_1" name="__tabbed_19" type="radio" /><div class="tabbed-labels"><label for="__tabbed_19_1">请求体</label></div>
+<p>类型：GET</p>
+<div class="tabbed-set tabbed-alternate" data-tabs="19:2"><input checked="checked" id="__tabbed_19_1" name="__tabbed_19" type="radio" /><input id="__tabbed_19_2" name="__tabbed_19" type="radio" /><div class="tabbed-labels"><label for="__tabbed_19_1">请求体</label><label for="__tabbed_19_2">响应参数</label></div>
 <div class="tabbed-content">
-<div class="tabbed-block"></div>
-</div>
-</div>
+<div class="tabbed-block">
 <table>
 <thead>
 <tr>
@@ -1918,11 +1912,8 @@
 </tr>
 </tbody>
 </table>
-<div class="tabbed-set tabbed-alternate" data-tabs="20:1"><input checked="checked" id="__tabbed_20_1" name="__tabbed_20" type="radio" /><div class="tabbed-labels"><label for="__tabbed_20_1">响应参数</label></div>
-<div class="tabbed-content">
-<div class="tabbed-block"></div>
 </div>
-</div>
+<div class="tabbed-block">
 <table>
 <thead>
 <tr>
@@ -1947,10 +1938,13 @@
 </tr>
 </tbody>
 </table>
+</div>
+</div>
+</div>
 <h2 id="requestsend">/request/send</h2>
 <p>场景：发送好友请求/入群请求</p>
 <p>类型：POST</p>
-<div class="tabbed-set tabbed-alternate" data-tabs="21:3"><input checked="checked" id="__tabbed_21_1" name="__tabbed_21" type="radio" /><input id="__tabbed_21_2" name="__tabbed_21" type="radio" /><input id="__tabbed_21_3" name="__tabbed_21" type="radio" /><div class="tabbed-labels"><label for="__tabbed_21_1">请求头</label><label for="__tabbed_21_2">请求体</label><label for="__tabbed_21_3">响应参数</label></div>
+<div class="tabbed-set tabbed-alternate" data-tabs="20:3"><input checked="checked" id="__tabbed_20_1" name="__tabbed_20" type="radio" /><input id="__tabbed_20_2" name="__tabbed_20" type="radio" /><input id="__tabbed_20_3" name="__tabbed_20" type="radio" /><div class="tabbed-labels"><label for="__tabbed_20_1">请求头</label><label for="__tabbed_20_2">请求体</label><label for="__tabbed_20_3">响应参数</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
 <p>使用 POST 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
@@ -2042,7 +2036,7 @@
 <h2 id="requestapply">/request/apply</h2>
 <p>场景：通过他人的好友请求/入群请求</p>
 <p>类型：POST</p>
-<div class="tabbed-set tabbed-alternate" data-tabs="22:3"><input checked="checked" id="__tabbed_22_1" name="__tabbed_22" type="radio" /><input id="__tabbed_22_2" name="__tabbed_22" type="radio" /><input id="__tabbed_22_3" name="__tabbed_22" type="radio" /><div class="tabbed-labels"><label for="__tabbed_22_1">请求头</label><label for="__tabbed_22_2">请求体</label><label for="__tabbed_22_3">响应参数</label></div>
+<div class="tabbed-set tabbed-alternate" data-tabs="21:3"><input checked="checked" id="__tabbed_21_1" name="__tabbed_21" type="radio" /><input id="__tabbed_21_2" name="__tabbed_21" type="radio" /><input id="__tabbed_21_3" name="__tabbed_21" type="radio" /><div class="tabbed-labels"><label for="__tabbed_21_1">请求头</label><label for="__tabbed_21_2">请求体</label><label for="__tabbed_21_3">响应参数</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
 <p>使用 POST 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
@@ -2122,7 +2116,7 @@
 <h2 id="requestreject">/request/reject</h2>
 <p>场景：拒绝他人的好友请求/入群请求</p>
 <p>类型：POST</p>
-<div class="tabbed-set tabbed-alternate" data-tabs="23:3"><input checked="checked" id="__tabbed_23_1" name="__tabbed_23" type="radio" /><input id="__tabbed_23_2" name="__tabbed_23" type="radio" /><input id="__tabbed_23_3" name="__tabbed_23" type="radio" /><div class="tabbed-labels"><label for="__tabbed_23_1">请求头</label><label for="__tabbed_23_2">请求体</label><label for="__tabbed_23_3">响应参数</label></div>
+<div class="tabbed-set tabbed-alternate" data-tabs="22:3"><input checked="checked" id="__tabbed_22_1" name="__tabbed_22" type="radio" /><input id="__tabbed_22_2" name="__tabbed_22" type="radio" /><input id="__tabbed_22_3" name="__tabbed_22" type="radio" /><div class="tabbed-labels"><label for="__tabbed_22_1">请求头</label><label for="__tabbed_22_2">请求体</label><label for="__tabbed_22_3">响应参数</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
 <p>使用 POST 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
@@ -2212,7 +2206,7 @@
 </details>
 <p>场景：第一类发送消息：持久化</p>
 <p>类型：POST</p>
-<div class="tabbed-set tabbed-alternate" data-tabs="24:2"><input checked="checked" id="__tabbed_24_1" name="__tabbed_24" type="radio" /><input id="__tabbed_24_2" name="__tabbed_24" type="radio" /><div class="tabbed-labels"><label for="__tabbed_24_1">请求体</label><label for="__tabbed_24_2">响应参数</label></div>
+<div class="tabbed-set tabbed-alternate" data-tabs="23:2"><input checked="checked" id="__tabbed_23_1" name="__tabbed_23" type="radio" /><input id="__tabbed_23_2" name="__tabbed_23" type="radio" /><div class="tabbed-labels"><label for="__tabbed_23_1">请求体</label><label for="__tabbed_23_2">响应参数</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
 <table>
