--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -888,7 +888,7 @@
 <tbody>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -953,7 +953,7 @@
 </tr>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -992,7 +992,7 @@
 <tbody>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -1031,7 +1031,7 @@
 <tbody>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -1131,7 +1131,7 @@
 </tr>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -1211,7 +1211,7 @@
 <tbody>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -1280,7 +1280,7 @@
 <tbody>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -1500,11 +1500,32 @@
 <h2 id="listgroup">/list/group</h2>
 <p>场景：用于获取群聊列表</p>
 <p>类型：GET</p>
-<div class="tabbed-set tabbed-alternate" data-tabs="11:1"><input checked="checked" id="__tabbed_11_1" name="__tabbed_11" type="radio" /><div class="tabbed-labels"><label for="__tabbed_11_1">响应参数</label></div>
+<div class="tabbed-set tabbed-alternate" data-tabs="11:3"><input checked="checked" id="__tabbed_11_1" name="__tabbed_11" type="radio" /><input id="__tabbed_11_2" name="__tabbed_11" type="radio" /><input id="__tabbed_11_3" name="__tabbed_11" type="radio" /><div class="tabbed-labels"><label for="__tabbed_11_1">请求头</label><label for="__tabbed_11_2">请求体</label><label for="__tabbed_11_3">响应参数</label></div>
 <div class="tabbed-content">
-<div class="tabbed-block"></div>
+<div class="tabbed-block">
+<p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
 </div>
+<div class="tabbed-block">
+<table>
+<thead>
+<tr>
+<th>参数名称</th>
+<th>类型</th>
+<th>参数说明</th>
+<th>参数示例</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>username</td>
+<td>string</td>
+<td>用户名称</td>
+<td></td>
+</tr>
+</tbody>
+</table>
 </div>
+<div class="tabbed-block">
 <table>
 <thead>
 <tr>
@@ -1529,6 +1550,9 @@
 </tr>
 </tbody>
 </table>
+</div>
+</div>
+</div>
 <h2 id="listfriend">/list/friend</h2>
 <p>场景：用于获取好友列表</p>
 <p>类型：GET</p>
@@ -1538,7 +1562,24 @@
 <p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
 </div>
 <div class="tabbed-block">
-<p>本方法不需要提供任何请求体。</p>
+<table>
+<thead>
+<tr>
+<th>参数名称</th>
+<th>类型</th>
+<th>参数说明</th>
+<th>参数示例</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>username</td>
+<td>string</td>
+<td>用户名称</td>
+<td></td>
+</tr>
+</tbody>
+</table>
 </div>
 <div class="tabbed-block">
 <table>
@@ -1559,7 +1600,7 @@
 </tr>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -1575,14 +1616,17 @@
 </div>
 </div>
 <h2 id="listrequest">/list/request/</h2>
-<details class="danger" open="open">
-<summary>Danger</summary>
-<p>该接口仍未完工。</p>
+<details class="warning" open="open">
+<summary>Warning</summary>
+<p><strong>响应参数</strong>一栏的书写格式并不规范。</p>
 </details>
 <p>场景：用于获取所有申请</p>
 <p>类型：GET</p>
-<div class="tabbed-set tabbed-alternate" data-tabs="13:1"><input checked="checked" id="__tabbed_13_1" name="__tabbed_13" type="radio" /><div class="tabbed-labels"><label for="__tabbed_13_1">响应参数</label></div>
+<div class="tabbed-set tabbed-alternate" data-tabs="13:3"><input checked="checked" id="__tabbed_13_1" name="__tabbed_13" type="radio" /><input id="__tabbed_13_2" name="__tabbed_13" type="radio" /><input id="__tabbed_13_3" name="__tabbed_13" type="radio" /><div class="tabbed-labels"><label for="__tabbed_13_1">请求头</label><label for="__tabbed_13_2">请求体</label><label for="__tabbed_13_3">响应参数</label></div>
 <div class="tabbed-content">
+<div class="tabbed-block">
+<p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
+</div>
 <div class="tabbed-block">
 <table>
 <thead>
@@ -1595,34 +1639,65 @@
 </thead>
 <tbody>
 <tr>
-<td>request_id_list</td>
-<td>string[]</td>
-<td>请求 id 列表</td>
-<td>[</td>
-</tr>
-<tr>
-<td>"aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee",</td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>"aaaaaaaa-ffff-cccc-dddd-eeeeeeeeeeee"</td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>]</td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>errmsg</td>
+<td>username</td>
 <td>string</td>
-<td>若失败，返回错误信息</td>
-<td>"Error occurred due to Internal Server Error."</td>
+<td>用户名称</td>
+<td>"Jimmy"</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div class="tabbed-block">
+<p>| 参数名称        | 类型                                   | 参数说明            | 参数示例                       |
+| requests | Request[] | | |
+| code | number | 状态码 | 0 |
+| msg                                  | string   | 若失败，返回错误信息 | "Error occurred due to Internal Server Error." |</p>
+<p>Request[] 列表，其中每个元素包含：</p>
+<table>
+<thead>
+<tr>
+<th>参数名称</th>
+<th>类型</th>
+<th>参数说明</th>
+<th>参数示例</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>username</td>
+<td>string</td>
+<td>被申请用户名称</td>
+<td>"Jimmy"</td>
+</tr>
+<tr>
+<td>groupID</td>
+<td>string</td>
+<td>被申请群聊 ID</td>
+<td>"111"</td>
+</tr>
+<tr>
+<td>sender</td>
+<td>string</td>
+<td>申请人用户名称</td>
+<td>"Ubec"</td>
+</tr>
+<tr>
+<td>type</td>
+<td>string</td>
+<td>"group" or "friend"</td>
+<td>"group"</td>
+</tr>
+<tr>
+<td>reason</td>
+<td>string</td>
+<td>申请语</td>
+<td>"Please let me join in!"</td>
+</tr>
+<tr>
+<td>status</td>
+<td>string</td>
+<td>"pending", "accepted" or "rejected"</td>
+<td>"pending"</td>
 </tr>
 </tbody>
 </table>
@@ -1670,7 +1745,7 @@
 <tbody>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -1795,7 +1870,7 @@
 </tr>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -1857,7 +1932,7 @@
 </tr>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -2018,7 +2093,7 @@
 </tr>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -2058,30 +2133,6 @@
 <td>请求 ID（当返回群组和好友申请列表的时候会需要这个属性）</td>
 <td>"1111"</td>
 </tr>
-<tr>
-<td>username</td>
-<td>string</td>
-<td>被申请人用户名称</td>
-<td>"LittleSeven"</td>
-</tr>
-<tr>
-<td>groupID</td>
-<td>string</td>
-<td>被申请群 ID</td>
-<td>"1"</td>
-</tr>
-<tr>
-<td>sender</td>
-<td>string</td>
-<td>申请人用户名称</td>
-<td>"Jimmy"</td>
-</tr>
-<tr>
-<td>type</td>
-<td>string</td>
-<td>"group" or "friend"</td>
-<td>"group"</td>
-</tr>
 </tbody>
 </table>
 </div>
@@ -2098,7 +2149,7 @@
 <tbody>
 <tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
@@ -2139,28 +2190,10 @@
 <td>"1111"</td>
 </tr>
 <tr>
-<td>username</td>
+<td>reason</td>
 <td>string</td>
-<td>被申请人用户名称</td>
-<td>"LittleSeven"</td>
-</tr>
-<tr>
-<td>groupID</td>
-<td>string</td>
-<td>被申请群 ID</td>
-<td>"1"</td>
-</tr>
-<tr>
-<td>sender</td>
-<td>string</td>
-<td>申请人用户名称</td>
-<td>"Jimmy"</td>
-</tr>
-<tr>
-<td>type</td>
-<td>string</td>
-<td>"group" or "friend"</td>
-<td>"group"</td>
+<td>拒绝理由</td>
+<td>"We're sorry."</td>
 </tr>
 </tbody>
 </table>
@@ -2177,14 +2210,8 @@
 </thead>
 <tbody>
 <tr>
-<td>reason</td>
-<td>string</td>
-<td>拒绝理由</td>
-<td>"We're sorry."</td>
-</tr>
-<tr>
 <td>code</td>
-<td>int</td>
+<td>number</td>
 <td>状态码</td>
 <td>0</td>
 </tr>
