--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -1648,10 +1648,36 @@
 </table>
 </div>
 <div class="tabbed-block">
-<p>| 参数名称        | 类型                                   | 参数说明            | 参数示例                       |
-| requests | Request[] | | |
-| code | number | 状态码 | 0 |
-| msg                                  | string   | 若失败，返回错误信息 | "Error occurred due to Internal Server Error." |</p>
+<table>
+<thead>
+<tr>
+<th>参数名称</th>
+<th>类型</th>
+<th>参数说明</th>
+<th>参数示例</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>requests</td>
+<td>Request[]</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>code</td>
+<td>number</td>
+<td>状态码</td>
+<td>0</td>
+</tr>
+<tr>
+<td>msg</td>
+<td>string</td>
+<td>若失败，返回错误信息</td>
+<td>"Error occurred due to Internal Server Error."</td>
+</tr>
+</tbody>
+</table>
 <p>Request[] 列表，其中每个元素包含：</p>
 <table>
 <thead>
