fix: Fix API of accept and reject.

--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -2159,6 +2159,30 @@
 <td>请求 ID（当返回群组和好友申请列表的时候会需要这个属性）</td>
 <td>"1111"</td>
 </tr>
+<tr>
+<td>username</td>
+<td>string</td>
+<td>被申请用户名称</td>
+<td>"Jimmy"</td>
+</tr>
+<tr>
+<td>groupID</td>
+<td>string</td>
+<td>被申请群聊 ID</td>
+<td>"111"</td>
+</tr>
+<tr>
+<td>sender</td>
+<td>string</td>
+<td>申请人用户名称</td>
+<td>"Ubec"</td>
+</tr>
+<tr>
+<td>type</td>
+<td>string</td>
+<td>"group" or "friend"</td>
+<td>"group"</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -2214,6 +2238,30 @@
 <td>string</td>
 <td>请求 ID（当返回群组和好友申请列表的时候会需要这个属性）</td>
 <td>"1111"</td>
+</tr>
+<tr>
+<td>username</td>
+<td>string</td>
+<td>被申请用户名称</td>
+<td>"Jimmy"</td>
+</tr>
+<tr>
+<td>groupID</td>
+<td>string</td>
+<td>被申请群聊 ID</td>
+<td>"111"</td>
+</tr>
+<tr>
+<td>sender</td>
+<td>string</td>
+<td>申请人用户名称</td>
+<td>"Ubec"</td>
+</tr>
+<tr>
+<td>type</td>
+<td>string</td>
+<td>"group" or "friend"</td>
+<td>"group"</td>
 </tr>
 <tr>
 <td>reason</td>
