fix: Fix request body.

--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -974,7 +974,7 @@
 <div class="tabbed-set tabbed-alternate" data-tabs="3:3"><input checked="checked" id="__tabbed_3_1" name="__tabbed_3" type="radio" /><input id="__tabbed_3_2" name="__tabbed_3" type="radio" /><input id="__tabbed_3_3" name="__tabbed_3" type="radio" /><div class="tabbed-labels"><label for="__tabbed_3_1">请求头</label><label for="__tabbed_3_2">请求体</label><label for="__tabbed_3_3">响应参数</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
-<p>使用 POST 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
+<p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
 </div>
 <div class="tabbed-block">
 <p>本方法不需要提供任何请求体。</p>
@@ -1059,24 +1059,7 @@
 <p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
 </div>
 <div class="tabbed-block">
-<table>
-<thead>
-<tr>
-<th>参数名称</th>
-<th>类型</th>
-<th>参数说明</th>
-<th>参数示例</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>username</td>
-<td>string</td>
-<td>用户名称</td>
-<td>"Jimmy"</td>
-</tr>
-</tbody>
-</table>
+<p>本方法不需要提供任何请求体。</p>
 </div>
 <div class="tabbed-block">
 <details class="warning" open="open">
@@ -1506,24 +1489,7 @@
 <p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
 </div>
 <div class="tabbed-block">
-<table>
-<thead>
-<tr>
-<th>参数名称</th>
-<th>类型</th>
-<th>参数说明</th>
-<th>参数示例</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>username</td>
-<td>string</td>
-<td>用户名称</td>
-<td></td>
-</tr>
-</tbody>
-</table>
+<p>本方法不需要提供任何请求体。</p>
 </div>
 <div class="tabbed-block">
 <table>
@@ -1562,24 +1528,7 @@
 <p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
 </div>
 <div class="tabbed-block">
-<table>
-<thead>
-<tr>
-<th>参数名称</th>
-<th>类型</th>
-<th>参数说明</th>
-<th>参数示例</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>username</td>
-<td>string</td>
-<td>用户名称</td>
-<td></td>
-</tr>
-</tbody>
-</table>
+<p>本方法不需要提供任何请求体。</p>
 </div>
 <div class="tabbed-block">
 <table>
@@ -1628,24 +1577,7 @@
 <p>使用 GET 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
 </div>
 <div class="tabbed-block">
-<table>
-<thead>
-<tr>
-<th>参数名称</th>
-<th>类型</th>
-<th>参数说明</th>
-<th>参数示例</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>username</td>
-<td>string</td>
-<td>用户名称</td>
-<td>"Jimmy"</td>
-</tr>
-</tbody>
-</table>
+<p>本方法不需要提供任何请求体。</p>
 </div>
 <div class="tabbed-block">
 <table>
@@ -1983,36 +1915,7 @@
 <div class="tabbed-set tabbed-alternate" data-tabs="19:2"><input checked="checked" id="__tabbed_19_1" name="__tabbed_19" type="radio" /><input id="__tabbed_19_2" name="__tabbed_19" type="radio" /><div class="tabbed-labels"><label for="__tabbed_19_1">请求体</label><label for="__tabbed_19_2">响应参数</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
-<table>
-<thead>
-<tr>
-<th>参数名称</th>
-<th>类型</th>
-<th>参数说明</th>
-<th>参数示例</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>token</td>
-<td>string</td>
-<td>用户 token</td>
-<td>"x-abcdefghijklmnopqrstuvwxyz"</td>
-</tr>
-<tr>
-<td>group_id</td>
-<td>string</td>
-<td>对应的 id</td>
-<td>"aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee"</td>
-</tr>
-<tr>
-<td>type</td>
-<td>bool</td>
-<td>0-群聊；1-好友</td>
-<td>0</td>
-</tr>
-</tbody>
-</table>
+<p>本方法不需要提供任何请求体。</p>
 </div>
 <div class="tabbed-block">
 <table>
