fix: Add requestID.

--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -1622,6 +1622,12 @@
 </thead>
 <tbody>
 <tr>
+<td>requestID</td>
+<td>string</td>
+<td>请求 ID</td>
+<td>"1111"</td>
+</tr>
+<tr>
 <td>username</td>
 <td>string</td>
 <td>被申请用户名称</td>
