fix: Add groupname.

--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -1640,6 +1640,12 @@
 <td>"111"</td>
 </tr>
 <tr>
+<td>groupname</td>
+<td>string</td>
+<td>被申请群聊名称</td>
+<td>"哈哈哈群"</td>
+</tr>
+<tr>
 <td>sender</td>
 <td>string</td>
 <td>申请人用户名称</td>
