fix: Fix /user/edit

--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -1196,6 +1196,18 @@
 <td>用户头像（base64）</td>
 <td></td>
 </tr>
+<tr>
+<td>oldPassword</td>
+<td>string</td>
+<td>原密码</td>
+<td>"xxx"</td>
+</tr>
+<tr>
+<td>newPassword</td>
+<td>string</td>
+<td>新密码</td>
+<td>"yyy"</td>
+</tr>
 </tbody>
 </table>
 </div>
