--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -1591,7 +1591,7 @@
 <tr>
 <td>userList</td>
 <td>User[]</td>
-<td>好友用户列表，每一项需要包括 username, nickname, avatar</td>
+<td>好友用户列表，每一项需要包括 username, nickname, avatar, tag</td>
 <td></td>
 </tr>
 <tr>
@@ -2395,7 +2395,7 @@
 <tr>
 <td>tag</td>
 <td>string</td>
-<td>对待判断用户的分组</td>
+<td>对好友的分组</td>
 <td>"Classmates"</td>
 </tr>
 <tr>
