--- a/site/webapi/index.html
+++ b/site/webapi/index.html
@@ -1616,7 +1616,6 @@
 <details class="danger" open="open">
 <summary>Danger</summary>
 <p>该接口已被弃用。</p>
-</details>
 <p>场景：用于用户登出</p>
 <p>类型：GET</p>
 <div class="tabbed-set tabbed-alternate" data-tabs="11:3"><input checked="checked" id="__tabbed_11_1" name="__tabbed_11" type="radio" /><input id="__tabbed_11_2" name="__tabbed_11" type="radio" /><input id="__tabbed_11_3" name="__tabbed_11" type="radio" /><div class="tabbed-labels"><label for="__tabbed_11_1">请求头</label><label for="__tabbed_11_2">请求体</label><label for="__tabbed_11_3">响应参数</label></div>
@@ -1655,6 +1654,7 @@
 </div>
 </div>
 </div>
+</details>
 <h2 id="message">/message</h2>
 <p>场景：获取某个会话所有聊天记录</p>
 <p>类型：POST</p>
@@ -2860,7 +2860,6 @@
 <details class="danger" open="open">
 <summary>Danger</summary>
 <p>该接口已被弃用。</p>
-</details>
 <p>场景：通过群成员昵称查询特定群聊成员用户名称</p>
 <p>类型：POST</p>
 <div class="tabbed-set tabbed-alternate" data-tabs="28:3"><input checked="checked" id="__tabbed_28_1" name="__tabbed_28" type="radio" /><input id="__tabbed_28_2" name="__tabbed_28" type="radio" /><input id="__tabbed_28_3" name="__tabbed_28" type="radio" /><div class="tabbed-labels"><label for="__tabbed_28_1">请求头</label><label for="__tabbed_28_2">请求体</label><label for="__tabbed_28_3">响应参数</label></div>
@@ -2928,6 +2927,7 @@
 </div>
 </div>
 </div>
+</details>
 <h2 id="searchuser">/search/user</h2>
 <p>场景：查询特定用户信息</p>
 <p>类型：POST</p>
@@ -3216,11 +3216,13 @@
 <details class="danger" open="open">
 <summary>Danger</summary>
 <p>该接口已被弃用。</p>
-</details>
 <p>场景：用于重置密码</p>
 <p>类型：POST</p>
-<div class="tabbed-set tabbed-alternate" data-tabs="33:2"><input checked="checked" id="__tabbed_33_1" name="__tabbed_33" type="radio" /><input id="__tabbed_33_2" name="__tabbed_33" type="radio" /><div class="tabbed-labels"><label for="__tabbed_33_1">请求体</label><label for="__tabbed_33_2">响应参数</label></div>
+<div class="tabbed-set tabbed-alternate" data-tabs="33:3"><input checked="checked" id="__tabbed_33_1" name="__tabbed_33" type="radio" /><input id="__tabbed_33_2" name="__tabbed_33" type="radio" /><input id="__tabbed_33_3" name="__tabbed_33" type="radio" /><div class="tabbed-labels"><label for="__tabbed_33_1">请求头</label><label for="__tabbed_33_2">请求体</label><label for="__tabbed_33_3">响应参数</label></div>
 <div class="tabbed-content">
+<div class="tabbed-block">
+<p>使用 POST 方法请求该 API 时需要携带 JWT 令牌验证身份。请求头需要将 Authorization 字段设置为 JWT 令牌。</p>
+</div>
 <div class="tabbed-block">
 <table>
 <thead>
@@ -3281,6 +3283,7 @@
 </div>
 </div>
 </div>
+</details>
 
 
 
