feat: Build site.

--- a/site/database/index.html
+++ b/site/database/index.html
@@ -799,10 +799,10 @@
 
 <h1 id="_1">数据库</h1>
 <p>我们项目采用的是 MongoDB 数据库。</p>
-<p><img alt="数据库" src="../assets/database.jpeg" /></p>
+<p><img alt="数据库" src="https://img.picgo.net/2024/05/20/database73d9199c88cba448.jpeg" /></p>
 <h2 id="mongodb">MongoDB 数据库</h2>
 <p>这是 MongoDB 数据库与关系型数据库之间的差别：</p>
-<p><img alt="MongoDB 数据库" src="../assets/mongodb.png" /></p>
+<p><img alt="MongoDB 数据库" src="https://img.picgo.net/2024/05/20/mongodb4859b2e1634e463d.png" /></p>
 <h2 id="1">1. 用户模块</h2>
 <h3 id="user">user 用户信息</h3>
 <table>
