--- a/site/workflow/index.html
+++ b/site/workflow/index.html
@@ -462,7 +462,7 @@
 
 
 <h1 id="_1">工作流程</h1>
-<p><img alt="工作流程" src="../assets/workflow.jpg" /></p>
+<p><img alt="工作流程" src="https://img.picgo.net/2024/05/20/workflow1ec9e566253c386f.jpg" /></p>
 
 
 
