--- a/site/user_story/index.html
+++ b/site/user_story/index.html
@@ -627,34 +627,34 @@
 
 <h1 id="_1">用户故事</h1>
 <h3 id="_2">用户注册与登录</h3>
-<p><strong>用户故事：</strong>作为一个新用户，我希望能够注册账号，以便使用即时通讯服务。
-<strong>用户故事</strong>：作为一个注册用户，我希望能够登录我的账号，以便开始聊天。</p>
+<p><strong>用户故事：</strong>作为一个新用户，我希望能够注册账号，以便使用即时通讯服务。</p>
+<p><strong>用户故事</strong>：作为一个注册用户，我希望能够登录我的账号，以便开始聊天。</p>
 <h3 id="_3">用户注销</h3>
 <p><strong>用户故事：</strong>作为一个注册用户，我希望能够注销我的账号，以便在不再使用服务时删除我的个人信息。</p>
 <h3 id="_4">用户认证与信息编辑</h3>
 <p><strong>用户故事：</strong>作为一个已登录用户，我希望能够修改我的用户名、密码、头像和联系方式，以便保持我的个人信息是最新的。
 好友关系管理</p>
-<p><strong>用户故事：</strong>作为一个用户，我希望能够查找其他用户并发起好友请求，以便扩展我的社交网络。
-<strong>用户故事：</strong>作为一个用户，我希望能够接受或拒绝好友请求，以便管理我的好友列表。
-<strong>用户故事：</strong>作为一个用户，我希望能够删除好友，以便维护我的社交网络。
-<strong>用户故事：</strong>作为一个用户，我希望能够查看和管理我的好友列表，包括对好友进行分组。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够查找其他用户并发起好友请求，以便扩展我的社交网络。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够接受或拒绝好友请求，以便管理我的好友列表。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够删除好友，以便维护我的社交网络。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够查看和管理我的好友列表，包括对好友进行分组。</p>
 <h3 id="_5">在线会话功能</h3>
-<p><strong>用户故事：</strong>作为一个用户，我希望能够发送和接收文本消息，以便与他人进行沟通。
-<strong>用户故事：</strong>作为一个用户，我希望能够查看每条消息的辅助信息，如发送时间和阅读状态。
-<strong>用户故事：</strong>作为一个用户，我希望能够看到每个会话的未读消息计数，以便知道哪些会话有新消息。
-<strong>用户故事：</strong>作为一个用户，我希望能够回复特定消息，以便进行针对性的对话。
-<strong>用户故事：</strong>作为一个用户，我希望能够查看会话的所有聊天记录，并能够筛选和删除记录。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够发送和接收文本消息，以便与他人进行沟通。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够查看每条消息的辅助信息，如发送时间和阅读状态。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够看到每个会话的未读消息计数，以便知道哪些会话有新消息。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够回复特定消息，以便进行针对性的对话。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够查看会话的所有聊天记录，并能够筛选和删除记录。</p>
 <h3 id="_6">群聊管理</h3>
-<p><strong>用户故事：</strong>作为一个用户，我希望能够从好友列表中创建群聊，以便与一组人进行讨论。
-<strong>用户故事：</strong>作为一个群聊成员，我希望能够查看群的基本信息，如群名称和成员列表。
-<strong>用户故事：</strong>作为一个群管理员，我希望能够管理群成员，包括添加和移除成员。
-<strong>用户故事：</strong>作为一个群主，我希望能够转让群主身份，以便在需要时将管理权交给他人。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够从好友列表中创建群聊，以便与一组人进行讨论。</p>
+<p><strong>用户故事：</strong>作为一个群聊成员，我希望能够查看群的基本信息，如群名称和成员列表。</p>
+<p><strong>用户故事：</strong>作为一个群管理员，我希望能够管理群成员，包括添加和移除成员。</p>
+<p><strong>用户故事：</strong>作为一个群主，我希望能够转让群主身份，以便在需要时将管理权交给他人。</p>
 <h3 id="_7">系统基本要求</h3>
-<p><strong>用户故事：</strong>作为一个用户，我希望站点能够正常显示和运行，以便无障碍地使用即时通讯服务。
-<strong>用户故事：</strong>作为一个用户，我希望能够确信我的数据是安全的，包括在数据库中加密存储敏感信息。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望站点能够正常显示和运行，以便无障碍地使用即时通讯服务。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够确信我的数据是安全的，包括在数据库中加密存储敏感信息。</p>
 <h3 id="_8">消息系统</h3>
-<p><strong>用户故事：</strong>作为一个用户，我希望能够及时收到消息，以便与他人保持实时沟通。
-<strong>用户故事：</strong>作为一个用户，我希望能够保证消息的可靠送达，即使在网络不佳的情况下。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够及时收到消息，以便与他人保持实时沟通。</p>
+<p><strong>用户故事：</strong>作为一个用户，我希望能够保证消息的可靠送达，即使在网络不佳的情况下。</p>
 
 
 
