fix: Fix typos.

--- a/site/acknowledgements/index.html
+++ b/site/acknowledgements/index.html
@@ -577,14 +577,16 @@
 </li>
 </ul>
 <h2 id="_3">致谢</h2>
-<p>首先感谢 <strong>助教安一帆</strong>，在工作百忙中抽出时间，协助解决开发中的基础问题。更重要的是，是安一帆给与我们选用 <code>fastify</code> 框架，不拘泥于已有 <code>django</code> 材料而革新。<strong>人是在探索中成长的</strong>。在开发期间，我们深刻体会到了这一点。无论是 
-- 从手写巨复杂的 <code>CORS</code> 配置，到找到合适第三方库
-- <code>socket.io-server</code> 的装饰、初始化方式
-- <code>node</code> 环境下 <code>mongodb</code> 的使用
-- <code>jest</code> 框架并发测试与服务器的不兼容
-- <code>mongo</code> 与 <code>node</code> 打包进 <code>docker</code> 镜像的方式
-- ...
-无不是 <code>fastify</code> 框架相较于 <code>django</code> 新产生的问题。曾几何时，周二验收前的凌晨，我们对着未知错误束手无策，不知从何修起；曾几何时，部署失败后的中午，我们因为验收零分想言放弃。是的，换成 <code>django</code> 框架只需稍作修改即可，但我们坚持下来了。</p>
+<p>首先感谢 <strong>助教安一帆</strong>，在工作百忙中抽出时间，协助解决开发中的基础问题。更重要的是，是安一帆给与我们选用 <code>fastify</code> 框架，不拘泥于已有 <code>django</code> 材料而革新。<strong>人是在探索中成长的</strong>。在开发期间，我们深刻体会到了这一点。无论是：</p>
+<ul>
+<li>从手写巨复杂的 <code>CORS</code> 配置，到找到合适第三方库</li>
+<li><code>socket.io-server</code> 的装饰、初始化方式</li>
+<li><code>node</code> 环境下 <code>mongodb</code> 的使用</li>
+<li><code>jest</code> 框架并发测试与服务器的不兼容</li>
+<li><code>mongo</code> 与 <code>node</code> 打包进 <code>docker</code> 镜像的方式</li>
+<li>...</li>
+</ul>
+<p>无不是 <code>fastify</code> 框架相较于 <code>django</code> 新产生的问题。曾几何时，周二验收前的凌晨，我们对着未知错误束手无策，不知从何修起；曾几何时，部署失败后的中午，我们因为验收零分想言放弃。是的，换成 <code>django</code> 框架只需稍作修改即可，但我们坚持下来了。</p>
 <p>我们在努力，在尝试，<strong>关关难过关关过</strong>。我们永远不会忘记 <code>2024年4月2日</code>，在意识到我们是唯一使用 <code>fastify</code> 框架的小组，助教们无框架使用经验时，因为测试无法通过，争论崩溃的那一刻；更忘不了下午时 <code>Test Successed</code> 显示出的那一秒，我们体会到了什么是探索的力量。从未知到已知很难，过程会很难，只要坚持下来，我们会因改动的几行配置而欣喜若狂。</p>
 <p>我们曾经毫无开发经验，只会启动 <code>react</code> 脚手架；但我们用一个月课余时间，开发出了可以使用的项目。虽然功能并不尽善尽美，甚至 <code>bug</code> 甚多，但这是我们自己的成果。开发经历对我们而言是宝贵且深刻的，我们也坚信，它一定会影响我们日后的工作生活。</p>
 <p>谢谢《软件工程》课程组，为我们提供了本次开发机会，我们衷心希望课程改革越来越好。</p>
